# Recall

./: .gitignore  docker-compose.yml
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/app/db/: session.py
backend/app/workers/: celery_app.py
backend/meeting_platform_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/stores/: useUiStore.ts
